# cpp-game-of-death

./: .gitignore  CMakeLists.txt  README.md  SFML-LICENSE.md  main.cpp
logger/: logger.cpp  logger.h  standard_logger.hpp  test_logger.h
src/: main.cpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp  standard_logger.cpp  standard_logger.hpp  test_logger.h
src/logger/tests/: test_logger.h
src/topology/: CMakeLists.txt  conway.hpp  conway_node.cpp  conway_node.hpp  conway_topology.cpp  conway_topology.hpp  grid.cpp  grid.hpp  node.hpp  node_array.hpp  test_conway.cpp  test_node.cpp  test_node.hpp
src/topology/tests/: test_conway.hpp  test_grid.cpp  test_grid.hpp  test_node.cpp  test_node.hpp
topology/: logger.hpp  node.hpp  test_conway.hpp
